# H.264-Bitstream

./: CMakeLists.txt
src/: bin.h  bitstream.c  bitstream.cpp  bitstream.h  h264_bs.c  h264_bs.h  h264_ffmpeg.c  h264_ffmpeg.h  h264_rbsp.cpp  h264_rbsp.h  main.cpp
src/test/: bitstream.cpp  h264_rbsp.cpp
test/: bitstream.cpp  h264_bs.cpp  main.cpp
